--- a/M.ioc
+++ b/M.ioc
@@ -4,48 +4,50 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=I2C1
 Mcu.IP1=NVIC
-Mcu.IP10=USART3
-Mcu.IP11=USB_DEVICE
-Mcu.IP12=USB_OTG_FS
+Mcu.IP10=USART2
+Mcu.IP11=USART3
+Mcu.IP12=USB_DEVICE
+Mcu.IP13=USB_OTG_FS
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IP5=TIM7
-Mcu.IP6=UART4
-Mcu.IP7=UART5
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=13
+Mcu.IP5=TIM1
+Mcu.IP6=TIM7
+Mcu.IP7=UART4
+Mcu.IP8=UART5
+Mcu.IP9=USART1
+Mcu.IPNb=14
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE4
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PC10
-Mcu.Pin13=PC11
-Mcu.Pin14=PC12
-Mcu.Pin15=PD2
-Mcu.Pin16=PD5
-Mcu.Pin17=PD6
-Mcu.Pin18=PB3
-Mcu.Pin19=PB4
+Mcu.Pin10=PD9
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PC10
+Mcu.Pin14=PC11
+Mcu.Pin15=PC12
+Mcu.Pin16=PD2
+Mcu.Pin17=PD5
+Mcu.Pin18=PD6
+Mcu.Pin19=PB3
 Mcu.Pin2=PE5
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=PB8
-Mcu.Pin23=PB9
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin26=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=PB4
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PB8
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin27=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PA7
 Mcu.Pin6=PE7
 Mcu.Pin7=PE8
-Mcu.Pin8=PD8
-Mcu.Pin9=PD9
-Mcu.PinsNb=27
+Mcu.Pin8=PE9
+Mcu.Pin9=PD8
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -122,7 +124,8 @@ PE5.Signal=GPIO_Output
 PE7.Locked=true
 PE7.Signal=GPIO_Output
 PE8.Locked=true
-PE8.Signal=GPIO_Output
+PE8.Signal=TIM1_CH1N
+PE9.Signal=S_TIM1_CH1
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -190,12 +193,18 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
 SPI1.CalculateBaudRate=656.25 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES_RXONLY
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
+TIM1.Period=999
+TIM1.Prescaler=167
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=999
 TIM7.Prescaler=2099
